load("//third_party:com_github_robotlocomotion_drake/tools/workspace/cpplint.bzl", "cpplint")
load("//third_party:com_github_robotlocomotion_drake/tools/workspace/python_lint.bzl", "python_lint")
load(
    "//tools:dreal.bzl",
    "dreal_cc_googletest",
    "dreal_cc_library",
    "dreal_pybind_library",
)
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

dreal_cc_library(
    name = "symbolic",
    srcs = [
        "symbolic.cc",
    ],
    hdrs = [
        "symbolic.h",
    ],
    deps = [
        "//dreal/util:assert",
        "//dreal/util:exception",
        "//dreal/util:logging",
        "//third_party/com_github_robotlocomotion_drake:drake_symbolic",
    ],
)

dreal_cc_library(
    name = "symbolic_test_util",
    testonly = 1,
    hdrs = [
        "symbolic_test_util.h",
    ],
    deps = [
        ":symbolic",
    ],
)

dreal_cc_googletest(
    name = "symbolic_test",
    tags = ["unit"],
    deps = [
        ":symbolic",
        ":symbolic_test_util",
    ],
)

# ----------------------
# Bindings
# ----------------------
dreal_pybind_library(
    name = "dreal_symbolic_py",
    cc_srcs = ["symbolic_py.cc"],
    cc_deps = [
        "//dreal/util:exception",
    ],
    py_srcs = ["__init__.py"],
)

py_test(
    name = "symbolic_test_py",
    srcs = [
        "test/symbolic_test.py",
    ],
    main = "test/symbolic_test.py",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_symbolic_py",
    ],
)

pkg_tar(
    name = "package_python",
    srcs = [
        ":_dreal_symbolic_py.so",
        ":dreal_symbolic_py",
    ],
    extension = "tar.gz",
    package_dir = "lib/python2.7/site-packages/dreal/symbolic",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# ----------------------
# Header files to expose
# ----------------------
filegroup(
    name = "headers",
    srcs = [
        "symbolic.h",
        "//third_party/com_github_robotlocomotion_drake:headers",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "package_headers",
    srcs = [
        ":headers",
    ],
    extension = "tar.gz",
    package_dir = "include/dreal/symbolic",
    tags = ["manual"],
)

cpplint()

python_lint()
