load("//third_party:com_github_robotlocomotion_drake/tools/workspace/cpplint.bzl", "cpplint")
load("//third_party:com_github_robotlocomotion_drake/tools/workspace/python_lint.bzl", "python_lint")
load(
    "//tools:dreal.bzl",
    "PYTHON_PACKAGE_DIR",
    "dreal_cc_googletest",
    "dreal_cc_library",
    "dreal_pybind_library",
)
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

package(default_visibility = ["//visibility:private"])

dreal_cc_library(
    name = "prefix_printer",
    srcs = [
        "prefix_printer.cc",
    ],
    hdrs = [
        "prefix_printer.h",
    ],
    visibility = [
        "//:__pkg__",
        "//dreal:__subpackages__",
    ],
    deps = [
        ":symbolic",
    ],
)

dreal_cc_library(
    name = "symbolic",
    srcs = [
        "symbolic.cc",
    ],
    hdrs = [
        "symbolic.h",
    ],
    visibility = [
        "//:__pkg__",
        "//dreal:__subpackages__",
    ],
    deps = [
        "//dreal/util:assert",
        "//dreal/util:exception",
        "//dreal/util:logging",
        "//third_party/com_github_robotlocomotion_drake:drake_symbolic",
    ],
)

dreal_cc_library(
    name = "symbolic_test_util",
    testonly = 1,
    hdrs = [
        "symbolic_test_util.h",
    ],
    visibility = [
        "//dreal/util:__pkg__",
    ],
    deps = [
        ":symbolic",
    ],
)

dreal_cc_googletest(
    name = "prefix_printer_test",
    tags = ["unit"],
    deps = [
        ":prefix_printer",
    ],
)

dreal_cc_googletest(
    name = "symbolic_test",
    tags = ["unit"],
    deps = [
        ":symbolic",
        ":symbolic_test_util",
    ],
)

# ----------------------
# Bindings
# ----------------------
dreal_pybind_library(
    name = "dreal_symbolic_py",
    cc_deps = [
        "//dreal/util:exception",
    ],
    cc_srcs = ["symbolic_py.cc"],
    py_srcs = ["__init__.py"],
)

py_test(
    name = "symbolic_test_py",
    srcs = [
        "test/symbolic_test.py",
    ],
    main = "test/symbolic_test.py",
    srcs_version = "PY2AND3",
    tags = [
        "no_asan",
        "no_lsan",
        "no_tsan",
        "no_ubsan",
    ],
    deps = [
        ":dreal_symbolic_py",
    ],
)

pkg_tar(
    name = "package_python",
    srcs = [
        ":_dreal_symbolic_py.so",
        ":dreal_symbolic_py",
    ],
    extension = "tar.gz",
    package_dir = PYTHON_PACKAGE_DIR + "/dreal/symbolic",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

# ----------------------
# Header files to expose
# ----------------------
filegroup(
    name = "headers",
    srcs = [
        "prefix_printer.h",
        "symbolic.h",
        "//third_party/com_github_robotlocomotion_drake:headers",
    ],
    visibility = ["//:__pkg__"],
)

pkg_tar(
    name = "package_headers",
    srcs = [
        ":headers",
    ],
    extension = "tar.gz",
    package_dir = "include/dreal/symbolic",
    tags = ["manual"],
    visibility = ["//:__pkg__"],
)

cpplint()

python_lint()

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])
